--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 21:05:04 2018</p>
+         Last Run: Fri Jul 20 22:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>16</td>
                         <td>16</td>
                         <td>6</td>
-                        <td>52</td>
+                        <td>54</td>
                         <td>3</td>
                         <td>10</td>
-                        <td>S</td>
-                        <td>4</td>
+                        <td>SSE</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -46,11 +46,11 @@
                         <td>18</td>
                         <td>18</td>
                         <td>4</td>
-                        <td>42</td>
+                        <td>44</td>
                         <td>4</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>9</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>20</td>
                         <td>20</td>
                         <td>11</td>
-                        <td>33</td>
+                        <td>35</td>
                         <td>6</td>
                         <td>10</td>
-                        <td>SW</td>
-                        <td>15</td>
+                        <td>SSW</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -70,7 +70,7 @@
                         <td>19</td>
                         <td>19</td>
                         <td>15</td>
-                        <td>33</td>
+                        <td>32</td>
                         <td>7</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -82,10 +82,10 @@
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>28</td>
+                        <td>27</td>
                         <td>7</td>
                         <td>13</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>50</td>
                      </tr>
                   </tbody>
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "52",
-                 "42",
-                 "33",
-                 "33",
-                 "28"
+                 "54",
+                 "44",
+                 "35",
+                 "32",
+                 "27"
                ]
              },
              {
@@ -226,9 +226,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "4",
-                 "9",
-                 "15",
+                 "5",
+                 "10",
+                 "20",
                  "43",
                  "50"
                ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 21:05:04 2018</p>
+         Last Run: Fri Jul 20 22:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -269,10 +269,10 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>37</td>
                         <td>1</td>
                         <td>16</td>
                         <td>ENE</td>
@@ -283,7 +283,7 @@
                         <td>Clear</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>1</td>
+                        <td>2</td>
                         <td>41</td>
                         <td>0</td>
                         <td>14</td>
@@ -295,7 +295,7 @@
                         <td>Clear</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>4</td>
+                        <td>2</td>
                         <td>50</td>
                         <td>0</td>
                         <td>13</td>
@@ -344,7 +344,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "21",
+                 "20",
                  "19",
                  "17"
                ]
@@ -355,7 +355,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "21",
+                 "20",
                  "19",
                  "17"
                ]
@@ -409,8 +409,8 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "1",
-                 "4"
+                 "2",
+                 "2"
                ]
              },
              {
@@ -418,7 +418,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "36",
+                 "37",
                  "41",
                  "50"
                ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 21:05:04 2018</p>
+         Last Run: Fri Jul 20 22:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
