--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 01:05:04 2018</p>
+         Last Run: Sat Jul 21 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -34,19 +34,19 @@
                         <td>16</td>
                         <td>16</td>
                         <td>1</td>
-                        <td>53</td>
+                        <td>55</td>
                         <td>3</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>S</td>
-                        <td>4</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>0</td>
-                        <td>42</td>
+                        <td>1</td>
+                        <td>44</td>
                         <td>4</td>
                         <td>11</td>
                         <td>S</td>
@@ -55,14 +55,14 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>20</td>
-                        <td>20</td>
-                        <td>11</td>
-                        <td>32</td>
+                        <td>19</td>
+                        <td>19</td>
+                        <td>3</td>
+                        <td>34</td>
                         <td>6</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>15</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -70,23 +70,23 @@
                         <td>19</td>
                         <td>19</td>
                         <td>15</td>
-                        <td>31</td>
+                        <td>32</td>
                         <td>7</td>
                         <td>10</td>
-                        <td>SW</td>
-                        <td>43</td>
+                        <td>WSW</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>15</td>
-                        <td>26</td>
+                        <td>27</td>
                         <td>7</td>
                         <td>13</td>
                         <td>WSW</td>
-                        <td>46</td>
+                        <td>41</td>
                      </tr>
                   </tbody>
                </table>
@@ -134,9 +134,9 @@
                "data":[
                  "16",
                  "18",
-                 "20",
                  "19",
-                 "22"
+                 "19",
+                 "21"
                ]
              },
              {
@@ -147,9 +147,9 @@
                "data":[
                  "16",
                  "18",
-                 "20",
                  "19",
-                 "22"
+                 "19",
+                 "21"
                ]
              }
            ]
@@ -203,8 +203,8 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "1",
-                 "0",
-                 "11",
+                 "1",
+                 "3",
                  "15",
                  "15"
                ]
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "53",
-                 "42",
+                 "55",
+                 "44",
+                 "34",
                  "32",
-                 "31",
-                 "26"
+                 "27"
                ]
              },
              {
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "4",
                  "9",
-                 "15",
-                 "43",
-                 "46"
+                 "9",
+                 "11",
+                 "38",
+                 "41"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 01:05:04 2018</p>
+         Last Run: Sat Jul 21 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -269,38 +269,38 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>39</td>
                         <td>1</td>
                         <td>14</td>
-                        <td>ENE</td>
-                        <td>6</td>
+                        <td>NE</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>2</td>
-                        <td>41</td>
+                        <td>0</td>
+                        <td>43</td>
                         <td>0</td>
                         <td>14</td>
-                        <td>ENE</td>
-                        <td>3</td>
+                        <td>NE</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>6</td>
-                        <td>50</td>
+                        <td>1</td>
+                        <td>51</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>ENE</td>
-                        <td>2</td>
+                        <td>NE</td>
+                        <td>18</td>
                      </tr>
                   </tbody>
                </table>
@@ -344,7 +344,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "21",
+                 "20",
                  "19",
                  "17"
                ]
@@ -355,7 +355,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "21",
+                 "20",
                  "19",
                  "17"
                ]
@@ -409,8 +409,8 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "2",
-                 "6"
+                 "0",
+                 "1"
                ]
              },
              {
@@ -418,9 +418,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "36",
-                 "41",
-                 "50"
+                 "39",
+                 "43",
+                 "51"
                ]
              },
              {
@@ -428,9 +428,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "6",
-                 "3",
-                 "2"
+                 "23",
+                 "20",
+                 "18"
                ]
              }
            ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 01:05:04 2018</p>
+         Last Run: Sat Jul 21 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -471,60 +471,60 @@
                         <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>8</td>
-                        <td>31</td>
                         <td>2</td>
-                        <td>13</td>
+                        <td>33</td>
+                        <td>2</td>
+                        <td>11</td>
                         <td>SE</td>
-                        <td>32</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>10</td>
-                        <td>33</td>
+                        <td>2</td>
+                        <td>35</td>
                         <td>1</td>
-                        <td>14</td>
-                        <td>SE</td>
-                        <td>36</td>
+                        <td>13</td>
+                        <td>ESE</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>12</td>
-                        <td>38</td>
+                        <td>21</td>
+                        <td>21</td>
+                        <td>4</td>
+                        <td>40</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>39</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
-                        <td>24</td>
-                        <td>45</td>
+                        <td>Chance of a Thunderstorm</td>
+                        <td>19</td>
+                        <td>19</td>
+                        <td>31</td>
+                        <td>47</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>ESE</td>
-                        <td>41</td>
+                        <td>E</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>24</td>
-                        <td>54</td>
+                        <td>33</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>ESE</td>
-                        <td>41</td>
+                        <td>E</td>
+                        <td>40</td>
                      </tr>
                   </tbody>
                </table>
@@ -572,8 +572,8 @@
                "data":[
                  "24",
                  "23",
-                 "22",
-                 "20",
+                 "21",
+                 "19",
                  "17"
                ]
              },
@@ -585,8 +585,8 @@
                "data":[
                  "24",
                  "23",
-                 "22",
-                 "20",
+                 "21",
+                 "19",
                  "17"
                ]
              }
@@ -640,11 +640,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "8",
-                 "10",
-                 "12",
-                 "24",
-                 "24"
+                 "2",
+                 "2",
+                 "4",
+                 "31",
+                 "33"
                ]
              },
              {
@@ -652,11 +652,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "31",
                  "33",
-                 "38",
-                 "45",
-                 "54"
+                 "35",
+                 "40",
+                 "47",
+                 "56"
                ]
              },
              {
@@ -664,11 +664,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "32",
-                 "36",
+                 "33",
+                 "35",
+                 "37",
                  "39",
-                 "41",
-                 "41"
+                 "40"
                ]
              }
            ]
