--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 03:05:04 2018</p>
+         Last Run: Sat Jul 21 04:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -33,12 +33,12 @@
                         <td>Clear</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>1</td>
-                        <td>57</td>
+                        <td>0</td>
+                        <td>54</td>
                         <td>3</td>
                         <td>11</td>
                         <td>S</td>
-                        <td>9</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -46,7 +46,7 @@
                         <td>18</td>
                         <td>18</td>
                         <td>1</td>
-                        <td>45</td>
+                        <td>44</td>
                         <td>4</td>
                         <td>11</td>
                         <td>S</td>
@@ -55,12 +55,12 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>2</td>
                         <td>35</td>
                         <td>6</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SSW</td>
                         <td>16</td>
                      </tr>
@@ -72,7 +72,7 @@
                         <td>15</td>
                         <td>29</td>
                         <td>7</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SW</td>
                         <td>38</td>
                      </tr>
@@ -134,7 +134,7 @@
                "data":[
                  "16",
                  "18",
-                 "20",
+                 "19",
                  "21",
                  "22"
                ]
@@ -147,7 +147,7 @@
                "data":[
                  "16",
                  "18",
-                 "20",
+                 "19",
                  "21",
                  "22"
                ]
@@ -202,7 +202,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
+                 "0",
                  "1",
                  "2",
                  "15",
@@ -214,8 +214,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
-                 "45",
+                 "54",
+                 "44",
                  "35",
                  "29",
                  "25"
@@ -226,7 +226,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "9",
+                 "7",
                  "8",
                  "16",
                  "38",
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 03:05:04 2018</p>
+         Last Run: Sat Jul 21 04:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -276,7 +276,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>NE</td>
-                        <td>23</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -288,19 +288,19 @@
                         <td>0</td>
                         <td>14</td>
                         <td>NE</td>
-                        <td>20</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>51</td>
                         <td>0</td>
                         <td>13</td>
                         <td>NE</td>
-                        <td>18</td>
+                        <td>16</td>
                      </tr>
                   </tbody>
                </table>
@@ -410,7 +410,7 @@
                "data":[
                  "0",
                  "0",
-                 "1"
+                 "0"
                ]
              },
              {
@@ -428,9 +428,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "23",
                  "20",
-                 "18"
+                 "17",
+                 "16"
                ]
              }
            ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 03:05:04 2018</p>
+         Last Run: Sat Jul 21 04:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -483,7 +483,7 @@
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>2</td>
+                        <td>4</td>
                         <td>35</td>
                         <td>1</td>
                         <td>13</td>
@@ -496,11 +496,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>4</td>
-                        <td>40</td>
+                        <td>39</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>37</td>
+                        <td>36</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -508,10 +508,10 @@
                         <td>19</td>
                         <td>19</td>
                         <td>31</td>
-                        <td>47</td>
+                        <td>46</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>E</td>
+                        <td>ESE</td>
                         <td>38</td>
                      </tr>
                      <tr>
@@ -520,11 +520,11 @@
                         <td>17</td>
                         <td>17</td>
                         <td>33</td>
-                        <td>56</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>10</td>
                         <td>E</td>
-                        <td>40</td>
+                        <td>39</td>
                      </tr>
                   </tbody>
                </table>
@@ -641,7 +641,7 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "1",
-                 "2",
+                 "4",
                  "4",
                  "31",
                  "33"
@@ -654,9 +654,9 @@
                "data":[
                  "33",
                  "35",
-                 "40",
-                 "47",
-                 "56"
+                 "39",
+                 "46",
+                 "55"
                ]
              },
              {
@@ -666,9 +666,9 @@
                "data":[
                  "33",
                  "35",
-                 "37",
+                 "36",
                  "38",
-                 "40"
+                 "39"
                ]
              }
            ]
